new: Implementing Window, bug: WinMain error

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "Saddle/vendor/glfw"]
-	path = Saddle/vendor/glfw
+[submodule "VolcaniCore/vendor/glfw"]
+	path = VolcaniCore/vendor/glfw
 	url = https://github.com/glfw/glfw.git
-[submodule "Saddle/vendor/glm"]
-	path = Saddle/vendor/glm
+[submodule "VolcaniCore/vendor/glm"]
+	path = VolcaniCore/vendor/glm
 	url = https://github.com/g-truc/glm.git
-[submodule "Saddle/vendor/imgui"]
-	path = Saddle/vendor/imgui
-	url = https://github.com/ocornut/imgui.git
