--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "VolcaniCore/vendor/glm"]
 	path = VolcaniCore/vendor/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "VolcaniCore/vendor/glad"]
+	path = VolcaniCore/vendor/glad
+	url = https://github.com/Dav1dde/glad.git
+	branch = c
