--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,5 @@
 **.sln
 **.vcxproj*
 
-# Exes and intermediates
-/bin/
-/obj/
-
-# GNU Makefiles
-Makefile
-**.make
+# Exes, intermediates, and GNU Makefiles
+build/
