todo: Implement bgfx and remake the entire engine.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
 	"editor.detectIndentation": false,
 	"editor.insertSpaces": false,
+	"files.associations": {
+		"*.html": "html",
+		"x11_platform.h": "c"
+	},
 }
