--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 	"editor.insertSpaces": false,
 	"files.associations": {
 		"*.html": "html",
-		"x11_platform.h": "c"
+		"x11_platform.h": "c",
+		"*.in": "cpp"
 	},
 }
