--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,6 @@
 [submodule "VolcaniCore/vendor/freetype"]
 	path = VolcaniCore/vendor/freetype
 	url = https://github.com/Jernesstar/freetype.git
+[submodule "Magma/vendor/yaml-cpp"]
+	path = Magma/vendor/yaml-cpp
+	url = https://github.com/jbeder/yaml-cpp.git
