--- a/imgui.ini
+++ b/imgui.ini
@@ -1,8 +1,12 @@
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-
 [Window][Spotlight]
 Pos=60,60
 Size=194,77
+
+[Window][Scene]
+Pos=264,82
+Size=381,364
+
+[Window][Debug##Default]
+Pos=97,68
+Size=400,400
 
