--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 [submodule "Magma/vendor/yaml-cpp"]
 	path = Magma/vendor/yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
+[submodule "Magma/vendor/portable-file-dialogs"]
+	path = Magma/vendor/portable-file-dialogs
+	url = https://github.com/samhocevar/portable-file-dialogs.git
