feat_end: Successfully implemented file dialogs; todo: Add the ability to edit the scene

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,12 +1,124 @@
-[Window][Spotlight]
-Pos=60,60
-Size=194,77
+[Window][Debug##Default]
+Pos=261,58
+Size=400,400
+
+[Window][Choose File##ChooseFileDlgKey]
+Pos=45,67
+Size=804,437
 
 [Window][Scene]
-Pos=264,82
-Size=381,364
+Pos=60,60
+Size=347,257
 
-[Window][Debug##Default]
-Pos=97,68
-Size=400,400
+[Window][Test]
+Pos=99,148
+Size=178,341
+
+[Window][Choose File##ChooseFile]
+Pos=27,192
+Size=637,381
+
+[Table][0xC562E54E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA4945F2D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x83F6BE78,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x634024C5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE71A34CC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x983364C6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x19BFAB18,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDCD5E15A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x59D160B8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA8C82C3C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFD8D65CD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x127FADD8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEDFC9549,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x05086114,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7E1D83AF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x968678CA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEA277C89,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4E0B694C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x68DD08D8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x42E4E046,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAC5F012E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9D8A69F6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8BE28C17,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFA4FA512,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA3F51D44,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x39AC6B30,4]
+RefScale=13
+Column 0  Sort=0v
 
