--- a/imgui.ini
+++ b/imgui.ini
@@ -1,22 +1,54 @@
 [Window][Debug##Default]
 Pos=261,58
 Size=400,400
+Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
 Pos=45,67
 Size=804,437
+Collapsed=0
 
 [Window][Scene]
-Pos=60,60
+Pos=781,375
 Size=347,257
+Collapsed=0
 
 [Window][Test]
 Pos=99,148
 Size=178,341
+Collapsed=0
 
 [Window][Choose File##ChooseFile]
 Pos=27,192
 Size=637,381
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Collapsed=0
+DockId=0x00000001
+
+[Window][Content Browser]
+Collapsed=0
+DockId=0x00000004
+
+[Window][MainDock]
+Size=800,600
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1200,900
+Collapsed=0
+
+[Window][Stats]
+Pos=60,60
+Size=632,387
+Collapsed=0
+
+[Window][Viewport]
+Pos=60,60
+Size=32,32
+Collapsed=0
 
 [Table][0xC562E54E,4]
 RefScale=13
@@ -119,6 +151,18 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x39AC6B30,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x41A8B27B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x35E2C949,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x680ED108,4]
 RefScale=13
 Column 0  Sort=0v
 
