--- a/imgui.ini
+++ b/imgui.ini
@@ -1,168 +1,61 @@
+[Window][DockSpace Demo]
+ViewportPos=50,277
+ViewportId=0x4647B76E
+Size=1920,1029
+Collapsed=0
+
 [Window][Debug##Default]
-Pos=261,58
+Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Choose File##ChooseFileDlgKey]
-Pos=45,67
-Size=804,437
-Collapsed=0
-
-[Window][Scene]
-Pos=781,375
-Size=347,257
-Collapsed=0
-
-[Window][Test]
-Pos=99,148
-Size=178,341
-Collapsed=0
-
-[Window][Choose File##ChooseFile]
-Pos=27,192
-Size=637,381
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Collapsed=0
-DockId=0x00000001
-
-[Window][Content Browser]
-Collapsed=0
-DockId=0x00000004
-
-[Window][MainDock]
-Size=800,600
-Collapsed=0
-
-[Window][DockSpace Demo]
-Pos=0,0
-Size=1200,900
-Collapsed=0
-
 [Window][Stats]
-Pos=60,60
-Size=632,387
+Pos=791,308
+Size=295,254
 Collapsed=0
 
 [Window][Viewport]
-Pos=60,60
-Size=32,32
+ViewportPos=50,277
+ViewportId=0x4647B76E
+Pos=369,117
+Size=1551,912
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][##toolbar]
+ViewportPos=50,277
+ViewportId=0x4647B76E
+Pos=369,84
+Size=1551,31
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Choose File##ChooseFileDlgKey]
+ViewportPos=149,116
+ViewportId=0x0568A31C
+Size=1058,858
 Collapsed=0
 
-[Table][0xC562E54E,4]
-RefScale=13
+[Window][Scene]
+ViewportPos=50,277
+ViewportId=0x4647B76E
+Pos=0,84
+Size=367,945
+Collapsed=0
+DockId=0x00000003,0
+
+[Table][0x5F272176,4]
+RefScale=36
 Column 0  Sort=0v
 
-[Table][0xA4945F2D,4]
-RefScale=13
+[Table][0x6B87F69B,4]
+RefScale=36
 Column 0  Sort=0v
 
-[Table][0x83F6BE78,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x634024C5,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xE71A34CC,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x983364C6,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x19BFAB18,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xDCD5E15A,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x59D160B8,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xA8C82C3C,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xFD8D65CD,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x127FADD8,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xEDFC9549,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x05086114,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x7E1D83AF,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x968678CA,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xEA277C89,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x4E0B694C,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x68DD08D8,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x42E4E046,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xAC5F012E,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x9D8A69F6,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x8BE28C17,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xFA4FA512,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0xA3F51D44,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x39AC6B30,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x41A8B27B,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x35E2C949,4]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x680ED108,4]
-RefScale=13
-Column 0  Sort=0v
+[Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=50,361 Size=1920,945 Split=X
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=367,858 Selected=0xE192E354
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=831,858 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1200,31 HiddenTabBar=1 Selected=0xF0F70764
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1200,825 CentralNode=1 Selected=0x13926F0B
 
