--- a/imgui.ini
+++ b/imgui.ini
@@ -1,7 +1,6 @@
 [Window][DockSpace Demo]
-ViewportPos=50,277
-ViewportId=0x4647B76E
-Size=1920,1029
+Pos=0,0
+Size=1200,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,53 +8,44 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Stats]
-Pos=791,308
-Size=295,254
+[Window][Scene Hierarchy]
+Pos=0,482
+Size=365,418
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Viewport]
-ViewportPos=50,277
-ViewportId=0x4647B76E
-Pos=369,117
-Size=1551,912
+Pos=367,75
+Size=833,825
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][##toolbar]
+Pos=367,42
+Size=833,31
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][##toolbar]
-ViewportPos=50,277
-ViewportId=0x4647B76E
-Pos=369,84
-Size=1551,31
+[Window][Properties]
+Pos=367,390
+Size=833,510
 Collapsed=0
-DockId=0x00000001,0
-
-[Window][Choose File##ChooseFileDlgKey]
-ViewportPos=149,116
-ViewportId=0x0568A31C
-Size=1058,858
-Collapsed=0
+DockId=0x00000007,0
 
 [Window][Scene]
-ViewportPos=50,277
-ViewportId=0x4647B76E
-Pos=0,84
-Size=367,945
+Pos=0,42
+Size=365,438
 Collapsed=0
-DockId=0x00000003,0
-
-[Table][0x5F272176,4]
-RefScale=36
-Column 0  Sort=0v
-
-[Table][0x6B87F69B,4]
-RefScale=36
-Column 0  Sort=0v
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=50,361 Size=1920,945 Split=X
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=367,858 Selected=0xE192E354
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=831,858 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1200,31 HiddenTabBar=1 Selected=0xF0F70764
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1200,825 CentralNode=1 Selected=0x13926F0B
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=5,98 Size=1200,858 Split=X
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=365,987 Split=Y Selected=0xE192E354
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=365,504 Selected=0xE192E354
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=365,481 Selected=0x2E9237F7
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=1553,987 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1920,475 Split=Y
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=887,31 HiddenTabBar=1 Selected=0xF0F70764
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=887,442 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1920,510 Selected=0x199AB496
 
