--- a/imgui.ini
+++ b/imgui.ini
@@ -39,7 +39,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=5,98 Size=1200,858 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=239,-122 Size=1200,858 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=365,987 Split=Y Selected=0xE192E354
     DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=365,504 Selected=0xE192E354
     DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=365,481 Selected=0x2E9237F7
