--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
 FROM mcr.microsoft.com/devcontainers/cpp:debian
 
-RUN apt-get update && apt-get install -y xorg-dev x11vnc
+RUN apt-get update && apt-get install -y xorg-dev
