--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1200,900
+Size=800,600
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,43 +9,43 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,482
-Size=365,418
+Pos=0,323
+Size=365,277
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=367,75
-Size=833,825
+Pos=367,66
+Size=433,534
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][##toolbar]
 Pos=367,42
-Size=833,31
+Size=433,22
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties]
-Pos=367,390
-Size=833,510
+Pos=367,402
+Size=433,198
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Scene]
 Pos=0,42
-Size=365,438
+Size=365,279
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=239,-122 Size=1200,858 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=303,68 Size=800,558 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=365,987 Split=Y Selected=0xE192E354
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=365,504 Selected=0xE192E354
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=365,481 Selected=0x2E9237F7
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=365,279 Selected=0xE192E354
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=365,277 Selected=0x2E9237F7
   DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=1553,987 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1920,475 Split=Y
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=887,31 HiddenTabBar=1 Selected=0xF0F70764
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=887,442 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1920,510 Selected=0x199AB496
+    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1920,358 Split=Y
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=887,22 HiddenTabBar=1 Selected=0xF0F70764
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=887,334 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1920,198 Selected=0x199AB496
 
