feat_begin: Beginning to add level loading and saving. The UIElement class. Renderer::DrawCube

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"editor.detectIndentation": false,
+	"editor.detectIndentation": true,
 	"editor.insertSpaces": false,
 	"files.associations": {
 		"*.html": "html",
