--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpace Demo]
-Pos=0,0
 Size=800,600
 Collapsed=0
 
@@ -38,8 +37,13 @@ Size=365,279
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][##Window]
+Pos=100,100
+Size=600,400
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=232,138 Size=800,558 Split=X
+DockSpace       ID=0x3BC79352 Pos=232,138 Size=800,558 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=365,987 Split=Y Selected=0xE192E354
     DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=365,279 Selected=0xE192E354
     DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=365,277 Selected=0x2E9237F7
