fix: Game works!

--- a/imgui.ini
+++ b/imgui.ini
@@ -42,6 +42,12 @@ Pos=100,100
 Size=600,400
 Collapsed=0
 
+[Window][Light]
+ViewportPos=407,555
+ViewportId=0xAADB73F3
+Size=543,155
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Pos=232,138 Size=800,558 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=365,987 Split=Y Selected=0xE192E354
