fixed some bugs

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,61 +1,17 @@
-[Window][DockSpace Demo]
-Size=800,600
-Collapsed=0
-
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Scene Hierarchy]
-Pos=0,323
-Size=365,277
+[Window][Lights]
+Pos=108,178
+Size=321,173
 Collapsed=0
-DockId=0x00000006,0
-
-[Window][Viewport]
-Pos=367,66
-Size=433,334
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][##toolbar]
-Pos=367,42
-Size=433,22
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Properties]
-Pos=367,402
-Size=433,198
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Scene]
-Pos=0,42
-Size=365,279
-Collapsed=0
-DockId=0x00000004,0
 
 [Window][##Window]
 Pos=100,100
 Size=600,400
 Collapsed=0
 
-[Window][Light]
-ViewportPos=407,555
-ViewportId=0xAADB73F3
-Size=543,155
-Collapsed=0
-
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=232,138 Size=800,558 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=365,987 Split=Y Selected=0xE192E354
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=365,279 Selected=0xE192E354
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=365,277 Selected=0x2E9237F7
-  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=1553,987 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1920,358 Split=Y
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=887,22 HiddenTabBar=1 Selected=0xF0F70764
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=887,334 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1920,198 Selected=0x199AB496
 
