bug: Nothing is workign

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,7 @@
-FROM mcr.microsoft.com/devcontainers/cpp:debian
+FROM mcr.microsoft.com/devcontainers/cpp:ubuntu-22.04
 
-RUN apt-get update && apt-get install -y xorg-dev
+RUN apt-get update \
+ && apt-get install -y xorg-dev \
+ && apt-get clean
+
+USER root
