--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/cpp:ubuntu-22.04
+FROM mcr.microsoft.com/devcontainers/cpp:ubuntu-24.04
 
-RUN apt-get update \
- && apt-get install -y xorg-dev \
- && apt-get clean
-
-USER root
+RUN sudo apt-get update \
+ && sudo apt-get install -y xorg-dev
