--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 		"vscode": {
 			"extensions": [
 				"PKief.material-icon-theme",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"GitHub.github-vscode-theme"
 			]
 		}
 	},
@@ -28,6 +29,5 @@
 		}
 	},
 
-	"remoteUser": "root",
-	"containerUser": "root"
+	"remoteUser": "root"
 }
