--- a/imgui.ini
+++ b/imgui.ini
@@ -4,14 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Lights]
-ViewportPos=90,6
-ViewportId=0x3F10B7DE
+Pos=208,216
 Size=321,173
 Collapsed=0
 
 [Window][##Window]
 Pos=100,100
 Size=600,400
+Collapsed=0
+
+[Window][Debug]
+Pos=60,60
+Size=66,94
 Collapsed=0
 
 [Docking][Data]
