feat_end: Lighting and uniform buffers works

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,19 +3,25 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Spotlight]
+Pos=60,60
+Size=237,146
+Collapsed=0
+
+[Window][##Spotlight]
+ViewportPos=873,373
+ViewportId=0x7769D4FB
+Size=665,172
+Collapsed=0
+
 [Window][Lights]
-Pos=42,39
-Size=445,315
+Pos=60,60
+Size=155,100
 Collapsed=0
 
 [Window][Debug]
-Pos=885,108
-Size=282,257
-Collapsed=0
-
-[Window][##Window]
-Pos=400,400
-Size=100,100
+Pos=60,60
+Size=66,94
 Collapsed=0
 
 [Docking][Data]
