--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=1078,269
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -27,6 +28,11 @@ Collapsed=0
 [Window][##Window]
 Pos=100,100
 Size=600,400
+Collapsed=0
+
+[Window][Parameters]
+Pos=602,90
+Size=700,214
 Collapsed=0
 
 [Docking][Data]
