--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=888,56
+ViewportPos=1224,415
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -30,9 +31,71 @@ Size=600,400
 Collapsed=0
 
 [Window][Parameters]
-Pos=874,23
+Pos=627,35
 Size=700,214
 Collapsed=0
 
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1600,877
+Collapsed=0
+
+[Window][Scene]
+Pos=362,50
+Size=352,537
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Viewport]
+Pos=716,83
+Size=876,786
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][##toolbar]
+Pos=716,50
+Size=876,31
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Choose File##ChooseFileDlgKey]
+Pos=179,192
+Size=1234,514
+Collapsed=0
+
+[Window][Add New Entity]
+Pos=60,60
+Size=300,246
+Collapsed=0
+
+[Window][Properties]
+Pos=8,589
+Size=706,280
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Scene Hierarchy]
+Pos=8,50
+Size=352,537
+Collapsed=0
+DockId=0x00000007,0
+
+[Table][0xA8FEF04F,4]
+RefScale=36
+Column 0  Sort=0v
+
+[Table][0x8F6062C0,4]
+RefScale=36
+Column 0  Sort=0v
+
 [Docking][Data]
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,73 Size=1584,819 Split=X
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=706,542 Split=Y Selected=0xE192E354
+    DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=492,537 Split=X Selected=0xE192E354
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=350,819 Selected=0x2E9237F7
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=354,819 Selected=0xE192E354
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=492,280 Selected=0x199AB496
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=876,542 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=784,31 HiddenTabBar=1 Selected=0xF0F70764
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=784,509 CentralNode=1 Selected=0x13926F0B
 
