--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1224,415
+ViewportPos=1146,337
 ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
@@ -36,7 +36,6 @@ Size=700,214
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1600,877
 Collapsed=0
 
@@ -89,7 +88,7 @@ RefScale=36
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,73 Size=1584,819 Split=X
+DockSpace       ID=0x3BC79352 Pos=8,73 Size=1584,819 Split=X
   DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=706,542 Split=Y Selected=0xE192E354
     DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=492,537 Split=X Selected=0xE192E354
       DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=350,819 Selected=0x2E9237F7
