Removed bgfx, renamed some things. fix: Somehow had the Mouse::MiddleButton and Mouse::RightButton values switched, now that's fixed

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=1060,228
+ViewportPos=1146,337
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -25,8 +26,8 @@ Size=428,298
 Collapsed=0
 
 [Window][##Window]
-Pos=502,290
-Size=600,300
+Pos=400,400
+Size=100,100
 Collapsed=0
 
 [Window][Parameters]
