--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1146,337
-ViewportId=0x9F5F46A1
+Pos=1164,332
 Size=400,400
 Collapsed=0
 
@@ -22,7 +21,7 @@ Collapsed=0
 
 [Window][Debug]
 Pos=947,96
-Size=428,298
+Size=294,272
 Collapsed=0
 
 [Window][##Window]
