--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=1164,332
+Pos=1068,236
 Size=400,400
 Collapsed=0
 
@@ -77,6 +77,11 @@ Pos=8,50
 Size=352,819
 Collapsed=0
 DockId=0x00000007,0
+
+[Window][Light]
+Pos=60,60
+Size=642,145
+Collapsed=0
 
 [Table][0xA8FEF04F,4]
 RefScale=36
