--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,7 @@
 [Window][Debug##Default]
-Pos=1068,236
-Size=400,400
+ViewportPos=1664,855
+ViewportId=0x9F5F46A1
+Size=500,400
 Collapsed=0
 
 [Window][Spotlight]
@@ -35,24 +36,25 @@ Size=700,214
 Collapsed=0
 
 [Window][DockSpace Demo]
-Size=1600,877
+Pos=0,0
+Size=800,600
 Collapsed=0
 
 [Window][Scene]
-Pos=362,50
-Size=352,819
+Pos=360,50
+Size=354,542
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Viewport]
 Pos=716,83
-Size=876,786
+Size=76,509
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][##toolbar]
 Pos=716,50
-Size=876,31
+Size=76,31
 Collapsed=0
 DockId=0x00000003,0
 
@@ -67,20 +69,25 @@ Size=300,246
 Collapsed=0
 
 [Window][Properties]
-Pos=8,589
-Size=706,280
+Pos=8,407
+Size=706,185
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene Hierarchy]
 Pos=8,50
-Size=352,819
+Size=706,542
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Light]
 Pos=60,60
 Size=642,145
+Collapsed=0
+
+[Window][SceneHierarchy]
+Pos=224,729
+Size=388,252
 Collapsed=0
 
 [Table][0xA8FEF04F,4]
@@ -91,8 +98,12 @@ Column 0  Sort=0v
 RefScale=36
 Column 0  Sort=0v
 
+[Table][0x2767C78F,4]
+RefScale=36
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=8,73 Size=1584,819 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=224,289 Size=784,542 Split=X
   DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=706,542 Split=Y Selected=0xE192E354
     DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=492,537 Split=X Selected=0xE192E354
       DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=350,819 Selected=0x2E9237F7
