--- a/imgui.ini
+++ b/imgui.ini
@@ -1,115 +1,27 @@
-[Window][Debug##Default]
-ViewportPos=1664,855
-ViewportId=0x9F5F46A1
-Size=500,400
-Collapsed=0
-
-[Window][Spotlight]
-Pos=60,60
-Size=610,184
-Collapsed=0
-
-[Window][##Spotlight]
-ViewportPos=873,373
-ViewportId=0x7769D4FB
-Size=665,172
-Collapsed=0
-
-[Window][Lights]
-Pos=256,51
-Size=454,128
-Collapsed=0
-
-[Window][Debug]
-Pos=947,96
-Size=294,272
-Collapsed=0
-
-[Window][##Window]
-Pos=400,400
-Size=100,100
-Collapsed=0
-
-[Window][Parameters]
-Pos=627,35
-Size=700,214
-Collapsed=0
-
-[Window][DockSpace Demo]
+[Window][DockSpaceWindow]
 Pos=0,0
-Size=800,600
+Size=1600,877
 Collapsed=0
 
-[Window][Scene]
-Pos=360,50
-Size=354,542
+[Window][Debug##Default]
+Pos=208,72
+Size=400,400
 Collapsed=0
-DockId=0x00000008,0
-
-[Window][Viewport]
-Pos=716,83
-Size=76,509
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][##toolbar]
-Pos=716,50
-Size=76,31
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Choose File##ChooseFileDlgKey]
-Pos=179,192
-Size=1234,514
-Collapsed=0
-
-[Window][Add New Entity]
-Pos=67,196
-Size=300,246
-Collapsed=0
-
-[Window][Properties]
-Pos=8,407
-Size=706,185
-Collapsed=0
-DockId=0x00000005,0
 
 [Window][Scene Hierarchy]
-Pos=8,50
-Size=706,542
+Pos=0,52
+Size=343,825
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000001,0
 
-[Window][Light]
-Pos=60,60
-Size=642,145
+[Window][Panels]
+ViewportPos=222,295
+ViewportId=0x8CBF7A7F
+Size=800,576
 Collapsed=0
-
-[Window][SceneHierarchy]
-Pos=224,729
-Size=388,252
-Collapsed=0
-
-[Table][0xA8FEF04F,4]
-RefScale=36
-Column 0  Sort=0v
-
-[Table][0x8F6062C0,4]
-RefScale=36
-Column 0  Sort=0v
-
-[Table][0x2767C78F,4]
-RefScale=36
-Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=250,315 Size=784,542 Split=X
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=706,542 Split=Y Selected=0xE192E354
-    DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=492,537 Split=X Selected=0xE192E354
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=350,819 Selected=0x2E9237F7
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=354,819 Selected=0xE192E354
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=492,280 Selected=0x199AB496
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=876,542 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=784,31 HiddenTabBar=1 Selected=0xF0F70764
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=784,509 CentralNode=1 Selected=0x13926F0B
+DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1600,825 Split=X
+  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=343,523 Selected=0x2E9237F7
+  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=455,523 CentralNode=1
 
