--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,15 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=800,600
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=208,72
-Size=400,400
+Pos=125,63
+Size=596,447
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=457,52
-Size=343,548
+Pos=1577,52
+Size=343,1005
 Collapsed=0
 DockId=0x00000002,0
 
@@ -20,8 +19,32 @@ ViewportId=0x8CBF7A7F
 Size=800,576
 Collapsed=0
 
+[Window][Choose File##ChooseFile]
+ViewportPos=195,328
+ViewportId=0xCBB8C2C5
+Size=871,508
+Collapsed=0
+
+[Window][Scene Visualizer]
+Pos=0,52
+Size=1920,1009
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][##Window]
+Size=1000,1000
+Collapsed=0
+
+[Table][0xF9AA59E3,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x783415C3,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=138,213 Size=800,548 Split=X
-  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=455,548 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=343,548 Selected=0x2E9237F7
+DockSpace   ID=0xF15DEC6E Pos=34,109 Size=1920,1009 Split=X Selected=0xBDDC88E0
+  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=1575,1005 CentralNode=1 Selected=0xBDDC88E0
+  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=343,1005 Selected=0x2E9237F7
 
