--- a/imgui.ini
+++ b/imgui.ini
@@ -1,17 +1,18 @@
 [Window][DockSpaceWindow]
-Size=1920,1061
+Pos=0,0
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=125,63
+Pos=191,130
 Size=596,447
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=1577,52
-Size=343,1005
+Pos=0,52
+Size=261,829
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Panels]
 ViewportPos=222,295
@@ -27,9 +28,9 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=0,52
-Size=1920,1009
+Size=1604,829
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][##Window]
 Size=1000,1000
@@ -44,7 +45,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Pos=34,109 Size=1920,1009 Split=X Selected=0xBDDC88E0
-  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=1575,1005 CentralNode=1 Selected=0xBDDC88E0
-  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=343,1005 Selected=0x2E9237F7
+DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=261,829 Selected=0x2E9237F7
+  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1341,829 CentralNode=1 Selected=0xBDDC88E0
 
