--- a/imgui.ini
+++ b/imgui.ini
@@ -21,8 +21,7 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-ViewportPos=195,328
-ViewportId=0xCBB8C2C5
+Pos=-172,115
 Size=871,508
 Collapsed=0
 
@@ -44,8 +43,12 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xF27FAE8E,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=-127,184 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=-91,161 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=261,829 Selected=0x2E9237F7
   DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1341,829 CentralNode=1 Selected=0xBDDC88E0
 
