--- a/imgui.ini
+++ b/imgui.ini
@@ -1,11 +1,10 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=188,89
-Size=596,442
+Pos=30,57
+Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
@@ -48,7 +47,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=-91,161 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace   ID=0xF15DEC6E Pos=-91,161 Size=1604,829 Split=X Selected=0xBDDC88E0
   DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=261,829 Selected=0x2E9237F7
   DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1341,829 CentralNode=1 Selected=0xBDDC88E0
 
