--- a/imgui.ini
+++ b/imgui.ini
@@ -1,15 +1,16 @@
 [Window][DockSpaceWindow]
-Size=1604,881
+Pos=0,0
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=30,57
+Pos=36,69
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=261,1009
+Size=261,1005
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,13 +21,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=-172,115
+Pos=519,241
 Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=0,52
-Size=1604,829
+Pos=263,52
+Size=1657,1009
 Collapsed=0
 DockId=0x00000002,0
 
@@ -46,8 +47,12 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x61C1EFEF,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Pos=-91,161 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
   DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=261,829 Selected=0x2E9237F7
   DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1341,829 CentralNode=1 Selected=0xBDDC88E0
 
