--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,52
-Size=261,1005
+Pos=0,86
+Size=261,795
 Collapsed=0
 DockId=0x00000001,0
 
@@ -26,14 +26,20 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=263,52
-Size=1657,1009
+Pos=-260,62
+Size=1604,795
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][##Window]
 Size=1000,1000
 Collapsed=0
+
+[Window][##toolbar]
+Pos=0,52
+Size=1604,32
+Collapsed=0
+DockId=0x00000003,0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -52,7 +58,9 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=0,75 Size=1920,1005 Split=X Selected=0xBDDC88E0
-  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=261,829 Selected=0x2E9237F7
-  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1341,829 CentralNode=1 Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1604,829 Split=Y Selected=0xBDDC88E0
+  DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,795 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=261,829 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1341,829 CentralNode=1 Selected=0xBDDC88E0
 
