--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1604,881
 Collapsed=0
 
@@ -58,7 +57,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1604,829 Split=Y Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Pos=112,187 Size=1604,829 Split=Y Selected=0xBDDC88E0
   DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
   DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,795 Split=X
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=261,829 Selected=0x2E9237F7
