--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,10 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=36,69
+Pos=35,53
 Size=751,472
 Collapsed=0
 
@@ -41,6 +41,11 @@ Size=1600,32
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Light]
+Pos=60,60
+Size=527,75
+Collapsed=0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -58,7 +63,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=86,161 Size=1604,829 Split=Y Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=60,135 Size=1920,1009 Split=Y Selected=0xBDDC88E0
   DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
   DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,791 Split=X
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=261,829 Selected=0x2E9237F7
