--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1604,875
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=261,825
+Size=221,829
 Collapsed=0
 DockId=0x00000001,0
 
@@ -26,10 +26,10 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=263,52
-Size=1337,825
+Pos=223,52
+Size=1381,829
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][##Window]
 Size=1000,1000
@@ -44,6 +44,21 @@ DockId=0x00000003,0
 [Window][Light]
 Pos=60,60
 Size=527,75
+Collapsed=0
+
+[Window][Parameters]
+Pos=60,60
+Size=429,128
+Collapsed=0
+
+[Window][Lights]
+Pos=60,60
+Size=369,90
+Collapsed=0
+
+[Window][Debug]
+Pos=104,227
+Size=407,193
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -63,9 +78,9 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=-60,125 Size=1604,829 Split=Y Selected=0xBDDC88E0
-  DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,791 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=261,829 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1337,829 CentralNode=1 Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=-338,158 Size=1604,823 Split=X Selected=0xBDDC88E0
+  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=221,825 Selected=0x2E9237F7
+  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1377,825 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 CentralNode=1 Selected=0xBDDC88E0
 
