--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=332,829
+Size=332,1009
 Collapsed=0
 DockId=0x00000001,0
 
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=334,52
-Size=1270,829
+Size=1586,1009
 Collapsed=0
 DockId=0x00000004,0
 
@@ -77,8 +77,12 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x92AFCE99,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=-236,195 Size=1604,829 Split=X Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1920,1009 Split=X Selected=0xBDDC88E0
   DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=332,825 Selected=0x2E9237F7
   DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1266,825 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
