progress: TypeID, UITab

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,52
-Size=332,1009
+Pos=0,56
+Size=313,1001
 Collapsed=0
 DockId=0x00000001,0
 
@@ -26,8 +26,8 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=334,52
-Size=1586,1009
+Pos=315,56
+Size=1605,1001
 Collapsed=0
 DockId=0x00000004,0
 
@@ -81,10 +81,26 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x03593FCA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCBEDA6CE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8704CC1B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF11D31B1,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1920,1009 Split=X Selected=0xBDDC88E0
-  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=332,825 Selected=0x2E9237F7
-  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1266,825 Split=Y
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,79 Size=1920,1001 Split=X Selected=0xBDDC88E0
+  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=313,1001 Selected=0x2E9237F7
+  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1605,1001 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 CentralNode=1 Selected=0xBDDC88E0
 
