--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1920,1057
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +8,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,56
-Size=313,1001
+Pos=8,60
+Size=313,993
 Collapsed=0
 DockId=0x00000001,0
 
@@ -27,19 +26,19 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=315,56
-Size=1605,1001
+Size=1605,1005
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][##Window]
-Size=1000,1000
+Pos=100,100
+Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
 Pos=0,52
-Size=1600,32
+Size=1920,32
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Light]
 Pos=60,60
@@ -59,6 +58,138 @@ Collapsed=0
 [Window][Debug]
 Pos=104,227
 Size=407,193
+Collapsed=0
+
+[Window][9069549109907999876]
+Size=1000,1000
+Collapsed=0
+
+[Window][5550374090610980998]
+Size=1000,1000
+Collapsed=0
+
+[Window][8088209247194670567]
+Size=1000,1000
+Collapsed=0
+
+[Window][5401521403628948329]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][17295632306428876560]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][16861102512537002351]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][7522514889558027438]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][17930382290246809578]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][9063209527904646355]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][1117671935039222358]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][2897194362376534941]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][5192182457045293902]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][13293966048923779659]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][15522333950907881146]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][7312642649454891642]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][6970715012316365135]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][12343504358334105576]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][13746183145908474578]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][16450242565333938755]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][12314990780208414604]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][13534309252574302105]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][12927387569818635555]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][5150366485799202819]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][2436473688134235073]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][18259963734629535261]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][8427454998712135596]
+Pos=100,100
+Size=600,600
+Collapsed=0
+
+[Window][6064921492580677624]
+Pos=100,100
+Size=600,600
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -98,9 +229,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,79 Size=1920,1001 Split=X Selected=0xBDDC88E0
-  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=313,1001 Selected=0x2E9237F7
-  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1605,1001 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 CentralNode=1 Selected=0xBDDC88E0
+DockSpace   ID=0xF15DEC6E Pos=138,213 Size=1920,1009 Split=X Selected=0xBDDC88E0
+  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=313,1001 Selected=0x2E9237F7
+  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1605,1001 CentralNode=1 HiddenTabBar=1
 
