--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,5 @@
 [Window][DockSpaceWindow]
+Pos=0,0
 Size=1920,1061
 Collapsed=0
 
@@ -8,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=8,60
-Size=313,993
+Pos=0,86
+Size=313,975
 Collapsed=0
 DockId=0x00000001,0
 
@@ -25,8 +26,8 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=315,56
-Size=1605,1005
+Pos=315,86
+Size=1605,975
 Collapsed=0
 DockId=0x00000002,0
 
@@ -39,6 +40,7 @@ Collapsed=0
 Pos=0,52
 Size=1920,32
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Light]
 Pos=60,60
@@ -229,7 +231,9 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Pos=138,213 Size=1920,1009 Split=X Selected=0xBDDC88E0
-  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=313,1001 Selected=0x2E9237F7
-  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1605,1001 CentralNode=1 HiddenTabBar=1
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=138,213 Size=1920,1009 Split=Y Selected=0xBDDC88E0
+  DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1920,32 HiddenTabBar=1 Selected=0xF0F70764
+  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1920,975 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=313,1001 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1605,1001 CentralNode=1 Selected=0xBDDC88E0
 
