--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,5 @@
 [Window][DockSpaceWindow]
+Pos=0,0
 Size=1920,1061
 Collapsed=0
 
@@ -8,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,52
-Size=332,1009
+Pos=0,85
+Size=332,976
 Collapsed=0
 DockId=0x00000001,0
 
@@ -25,8 +26,8 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=334,52
-Size=1586,1009
+Pos=334,85
+Size=1586,976
 Collapsed=0
 DockId=0x00000002,0
 
@@ -36,9 +37,10 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
-Size=1920,32
+Pos=284,53
+Size=1920,31
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Light]
 Pos=60,60
@@ -208,8 +210,22 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xC5DFAF82,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x192BD191,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x18D224EA,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Pos=268,343 Size=1920,1009 Split=X Selected=0xBDDC88E0
-  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=332,825 Selected=0x2E9237F7
-  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1266,825 CentralNode=1 HiddenTabBar=1
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=318,110 Size=1920,1009 Split=Y Selected=0xBDDC88E0
+  DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1920,31 HiddenTabBar=1 Selected=0xF0F70764
+  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1920,976 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=332,825 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1266,825 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
 
