progress: premake is annoying

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,85
-Size=332,796
+Pos=0,86
+Size=332,795
 Collapsed=0
 DockId=0x00000001,0
 
@@ -26,10 +26,10 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=334,85
-Size=1270,796
+Pos=334,86
+Size=1270,795
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][##Window]
 Pos=100,100
@@ -231,9 +231,9 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=-375,565 Size=1604,829 Split=Y Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=138,213 Size=1604,829 Split=Y Selected=0xBDDC88E0
   DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
   DockNode    ID=0x00000005 Parent=0xF15DEC6E SizeRef=1604,795 Split=X HiddenTabBar=1
     DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=332,825 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1266,825 CentralNode=1 Selected=0xF0F70764
+    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
 
