feat_begin: UIPage loading elements and functions

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1604,881
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +9,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,86
-Size=332,795
+Size=332,975
 Collapsed=0
 DockId=0x00000001,0
 
@@ -27,7 +26,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=334,86
-Size=1270,795
+Size=1586,975
 Collapsed=0
 DockId=0x00000002,0
 
@@ -37,8 +36,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=-305,70
-Size=1604,32
+Pos=0,52
+Size=1920,32
 Collapsed=0
 DockId=0x00000004,0
 
@@ -240,7 +239,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=-141,257 Size=1604,829 Split=Y Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Pos=86,161 Size=1920,1009 Split=Y Selected=0xBDDC88E0
   DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
   DockNode    ID=0x00000005 Parent=0xF15DEC6E SizeRef=1604,795 Split=X HiddenTabBar=1
     DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=332,825 Selected=0x2E9237F7
