--- a/imgui.ini
+++ b/imgui.ini
@@ -1,4 +1,5 @@
 [Window][DockSpaceWindow]
+Pos=0,0
 Size=1604,881
 Collapsed=0
 
@@ -8,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,86
-Size=332,795
+Pos=0,52
+Size=332,829
 Collapsed=0
 DockId=0x00000001,0
 
@@ -25,8 +26,8 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=334,86
-Size=1270,795
+Pos=334,52
+Size=1270,829
 Collapsed=0
 DockId=0x00000002,0
 
@@ -36,10 +37,10 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
+ViewportPos=297,375
+ViewportId=0x28257B55
 Size=1604,32
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Light]
 Pos=47,52
@@ -244,9 +245,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Pos=86,161 Size=1604,829 Split=Y Selected=0xBDDC88E0
-  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-  DockNode    ID=0x00000005 Parent=0xF15DEC6E SizeRef=1604,795 Split=X HiddenTabBar=1
-    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=332,825 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
+DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=-163,269 Size=1604,829 Split=X HiddenTabBar=1 Selected=0xBDDC88E0
+  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=332,825 Selected=0x2E9237F7
+  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
 
