--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1604,881
 Collapsed=0
 
@@ -245,7 +244,7 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=-163,269 Size=1604,829 Split=X HiddenTabBar=1 Selected=0xBDDC88E0
+DockSpace   ID=0xF15DEC6E Pos=-163,269 Size=1604,829 Split=X HiddenTabBar=1 Selected=0xBDDC88E0
   DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=332,825 Selected=0x2E9237F7
   DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
 
