--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,52
-Size=332,829
+Pos=0,85
+Size=332,796
 Collapsed=0
 DockId=0x00000001,0
 
@@ -26,8 +26,8 @@ Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=334,52
-Size=1270,829
+Pos=334,85
+Size=1270,796
 Collapsed=0
 DockId=0x00000002,0
 
@@ -37,10 +37,10 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-ViewportPos=297,375
-ViewportId=0x28257B55
-Size=1604,32
+Pos=0,52
+Size=1604,31
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Light]
 Pos=47,52
@@ -245,7 +245,9 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=190,265 Size=1604,829 Split=X HiddenTabBar=1 Selected=0xBDDC88E0
-  DockNode  ID=0x00000001 Parent=0xF15DEC6E SizeRef=332,825 Selected=0x2E9237F7
-  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=216,291 Size=1604,829 Split=Y Selected=0xBDDC88E0
+  DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,31 HiddenTabBar=1 Selected=0xF0F70764
+  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,796 Split=X HiddenTabBar=1
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=332,825 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
 
