change: Got this to work on Linux; fix: Multiple UIPage-s in UIBrowser

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1604,881
+Pos=0,0
+Size=1366,712
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,85
-Size=332,796
+Size=332,995
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,13 +21,14 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=-312,22
+ViewportPos=-312,47
+ViewportId=0xCBB8C2C5
 Size=871,508
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=334,85
-Size=1270,796
+Size=1586,995
 Collapsed=0
 DockId=0x00000002,0
 
@@ -36,8 +38,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
-Size=1604,31
+Pos=-303,62
+Size=1920,31
 Collapsed=0
 DockId=0x00000003,0
 
@@ -57,8 +59,8 @@ Size=700,73
 Collapsed=0
 
 [Window][Debug]
-Pos=276,224
-Size=176,163
+Pos=79,205
+Size=297,412
 Collapsed=0
 
 [Window][9069549109907999876]
@@ -243,10 +245,18 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x41FC0F1C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBAC7DD63,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Pos=216,291 Size=1604,829 Split=Y Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,77 Size=1366,660 Split=Y Selected=0xBDDC88E0
   DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,31 HiddenTabBar=1 Selected=0xF0F70764
-  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,796 Split=X HiddenTabBar=1
+  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,995 Split=X HiddenTabBar=1
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=332,825 Selected=0x2E9237F7
     DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
 
