feat_begin: SceneSerializer popups, nodes

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1920,1080
+Pos=0,0
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -8,8 +9,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,85
-Size=332,995
+Pos=0,52
+Size=300,829
 Collapsed=0
 DockId=0x00000001,0
 
@@ -20,16 +21,15 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-ViewportPos=-312,47
-ViewportId=0xCBB8C2C5
-Size=871,508
+Pos=202,153
+Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=334,85
-Size=1586,995
+Pos=302,85
+Size=1302,796
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][##Window]
 Pos=100,100
@@ -37,8 +37,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
-Size=1920,31
+Pos=302,52
+Size=1302,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -53,12 +53,12 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-Pos=106,55
+Pos=441,174
 Size=700,73
 Collapsed=0
 
 [Window][Debug]
-Pos=88,205
+Pos=99,294
 Size=297,412
 Collapsed=0
 
@@ -204,6 +204,21 @@ Pos=822,460
 Size=600,300
 Collapsed=0
 
+[Window][Properties]
+Pos=722,298
+Size=166,68
+Collapsed=0
+
+[Window][Options]
+Pos=767,411
+Size=70,58
+Collapsed=0
+
+[Window][Entity]
+Pos=60,60
+Size=32,40
+Collapsed=0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -252,10 +267,14 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x2180A5A3,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Pos=303,78 Size=1920,1028 Split=Y Selected=0xBDDC88E0
-  DockNode    ID=0x00000003 Parent=0xF15DEC6E SizeRef=1604,31 HiddenTabBar=1 Selected=0xF0F70764
-  DockNode    ID=0x00000004 Parent=0xF15DEC6E SizeRef=1604,995 Split=X HiddenTabBar=1
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=332,825 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1266,825 CentralNode=1 Selected=0xBDDC88E0
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=34,109 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=300,829 Selected=0x2E9237F7
+  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1302,829 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1604,795 CentralNode=1 Selected=0xBDDC88E0
 
