feat_end: File and folder icons in ContentBrowserPanel; todo: File hierarchy, Title bar on child windows

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=325,1009
+Size=276,472
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Panels]
 ViewportPos=222,295
@@ -21,15 +21,16 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=561,172
+ViewportPos=226,461
+ViewportId=0xCBB8C2C5
 Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=327,86
-Size=1593,975
+Pos=278,86
+Size=1024,566
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000F,0
 
 [Window][##Window]
 Pos=100,100
@@ -37,8 +38,8 @@ Size=600,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=0,52
-Size=1920,32
+Pos=278,52
+Size=1024,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -219,6 +220,130 @@ Pos=60,60
 Size=32,40
 Collapsed=0
 
+[Window][Dear ImGui Demo]
+ViewportPos=965,76
+ViewportId=0xE927CF2F
+Size=549,680
+Collapsed=0
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=60,60
+Size=536,282
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=623,474
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1600,877
+Collapsed=0
+
+[Window][Example: Documents]
+ViewportPos=60,83
+ViewportId=0x1FD64BEB
+Size=890,894
+Collapsed=0
+
+[Window][Lettuce]
+ViewportPos=60,83
+ViewportId=0x1FD64BEB
+Pos=8,116
+Size=660,770
+Collapsed=0
+DockId=0xA086D808,0
+
+[Window][Eggplant]
+ViewportPos=60,83
+ViewportId=0x1FD64BEB
+Pos=8,116
+Size=660,770
+Collapsed=0
+DockId=0xA086D808,1
+
+[Window][Carrot]
+ViewportPos=60,83
+ViewportId=0x1FD64BEB
+Pos=8,116
+Size=660,770
+Collapsed=0
+DockId=0xA086D808,2
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,376
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=401,458
+Collapsed=0
+
+[Window][Component Editor]
+Pos=0,526
+Size=276,355
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Assets]
+Pos=1318,52
+Size=282,825
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][File Hierarchy]
+Pos=0,654
+Size=1302,227
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Asset Editor]
+Pos=1429,52
+Size=175,829
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][UI Element Picker]
+Pos=-26,166
+Size=223,825
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][UI Visualizer]
+Pos=199,166
+Size=1073,596
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=498,176
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Content Browser]
+Pos=0,501
+Size=1427,380
+Collapsed=0
+DockId=0x00000010,0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -323,10 +448,39 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xB10A7358,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x7D14C9E4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF3B36BA1,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=280,138 Size=1920,1009 Split=X Selected=0xBDDC88E0
-  DockNode    ID=0x00000001 Parent=0xF15DEC6E SizeRef=325,829 Selected=0x2E9237F7
-  DockNode    ID=0x00000002 Parent=0xF15DEC6E SizeRef=1277,829 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1604,795 CentralNode=1 Selected=0xBDDC88E0
+DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x0000000D Parent=0xF15DEC6E SizeRef=223,825 Selected=0x6D5396E7
+  DockNode              ID=0x0000000E Parent=0xF15DEC6E SizeRef=1375,825 Split=X
+    DockNode            ID=0x0000000B Parent=0x0000000E SizeRef=1423,825 Split=X
+      DockNode          ID=0x00000009 Parent=0x0000000B SizeRef=1316,825 Split=X
+        DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=276,829 Split=Y Selected=0x2E9237F7
+          DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=276,470 Selected=0x2E9237F7
+          DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=276,353 Selected=0xF4B38336
+        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1020,829 Split=Y
+          DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
+          DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
+            DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,443 CentralNode=1
+              DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,380 Selected=0xBF096F38
+            DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
+      DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=282,825 Selected=0x26CE0345
+    DockNode            ID=0x0000000C Parent=0x0000000E SizeRef=175,825 Selected=0x2323D3E4
 
