feat_end: Name on Child windows, Drag and drop

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,52
-Size=276,472
+Size=276,829
 Collapsed=0
 DockId=0x00000005,0
 
@@ -21,14 +21,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-ViewportPos=226,461
-ViewportId=0xCBB8C2C5
+Pos=264,157
 Size=1298,482
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=278,86
-Size=1024,566
+Size=1049,413
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -39,7 +38,7 @@ Collapsed=0
 
 [Window][##toolbar]
 Pos=278,52
-Size=1024,32
+Size=1049,32
 Collapsed=0
 DockId=0x00000003,0
 
@@ -221,8 +220,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=965,76
-ViewportId=0xE927CF2F
+Pos=711,93
 Size=549,680
 Collapsed=0
 
@@ -295,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,526
-Size=276,355
+Pos=0,52
+Size=276,829
 Collapsed=0
 DockId=0x00000006,0
 
@@ -313,10 +311,10 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1429,52
-Size=175,829
+Pos=1329,52
+Size=275,829
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000011,0
 
 [Window][UI Element Picker]
 Pos=-26,166
@@ -339,10 +337,15 @@ IsChild=1
 Size=200,100
 
 [Window][Content Browser]
-Pos=0,501
-Size=1427,380
+Pos=278,501
+Size=1049,380
 Collapsed=0
 DockId=0x00000010,0
+
+[Window][Create Entity with MeshComponent]
+Pos=748,263
+Size=352,106
+Collapsed=0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -464,13 +467,21 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x3EEBE3DD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB856D115,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1604,829 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x0000000D Parent=0xF15DEC6E SizeRef=223,825 Selected=0x6D5396E7
-  DockNode              ID=0x0000000E Parent=0xF15DEC6E SizeRef=1375,825 Split=X
-    DockNode            ID=0x0000000B Parent=0x0000000E SizeRef=1423,825 Split=X
-      DockNode          ID=0x00000009 Parent=0x0000000B SizeRef=1316,825 Split=X
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=190,265 Size=1604,829 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x0000000B Parent=0xF15DEC6E SizeRef=1323,825 Split=X
+    DockNode            ID=0x0000000D Parent=0x0000000B SizeRef=223,825 Selected=0x6D5396E7
+    DockNode            ID=0x0000000E Parent=0x0000000B SizeRef=1375,825 Split=X
+      DockNode          ID=0x00000009 Parent=0x0000000E SizeRef=1316,825 Split=X
         DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=276,829 Split=Y Selected=0x2E9237F7
           DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=276,470 Selected=0x2E9237F7
           DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=276,353 Selected=0xF4B38336
@@ -478,9 +489,9 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=112,187 Size=1604,82
           DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1604,32 HiddenTabBar=1 Selected=0xF0F70764
           DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1604,791 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,443 CentralNode=1
+              DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1298,443 CentralNode=1 Selected=0xBDDC88E0
               DockNode  ID=0x00000010 Parent=0x00000007 SizeRef=1298,380 Selected=0xBF096F38
             DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=820,227 Selected=0xC599F4BB
-      DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=282,825 Selected=0x26CE0345
-    DockNode            ID=0x0000000C Parent=0x0000000E SizeRef=175,825 Selected=0x2323D3E4
+      DockNode          ID=0x0000000A Parent=0x0000000E SizeRef=282,825 Selected=0x26CE0345
+  DockNode              ID=0x00000011 Parent=0xF15DEC6E SizeRef=275,825 Selected=0x2323D3E4
 
